<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MercadoLivre Mobile</string>
    <string name="login">Login</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MercadoLivre Mobile</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in_register"><b>Entrar</b></string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_home">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cadastro">Cadastrar Anúncio</string>
    <string name="anuncioTituloText">Título</string>
    <string name="anuncioCategoriaText">Categoria</string>
    <string name="anuncioDescricaoText">Descrição</string>
    <string name="anuncioImagemText">Imagem</string>
    <string name="anuncioTirarFotoButton">Tirar foto</string>
    <string name="anuncioSelecionaFotoButton">Selecionar</string>
    <string name="anuncioPrecoText">Preço</string>
    <string name="anuncioSalvarButton">Anunciar</string>
    
</resources>